# Tide

./: .gitignore  LICENSE  README.md  Readme.md  config.yaml  csv_to_pytorch.py  data_structures.py  deltadoc.md  generated_patterns.json  graph_generator.py  h2_results.txt  load_pytorch_graph_example.py  main.py  new_Results.txt  new_results_final.txt  pattern_visualizer_simple.py  pyproject.toml  requirements.txt  utils.py  visualize_front_business.py  visualize_rapid_fund_movement.py  visualize_repeated_overseas_transfers.py  visualize_u_turn_transactions.py
configs/: graph.yaml  graph_HI.yaml  graph_LI.yaml  graph_high_homophily.yaml  graph_low_homophily.yaml  output.yaml  patterns.yaml
docs/: PYTORCH_GRAPH_FORMAT.md  lognormal_distribution_changes.md
experiments/: dataset_statistics.py  frequency_share_analysis.py  h1_pattern_validation.py  h2_scalability.py  h2_scalability_realistic.py  h2_scaling_analysis.py  h2_scaling_analysis_aggregated.py  h3_config_compliance.py  h4_reproducibility.py  h5_transaction_distribution_visualization.py  run_all_experiments.py
tests/: __init__.py  conftest.py  run_tests.py  test_graph_generator.py
tests/configs/: graph.yaml  patterns.yaml
tide/: __init__.py  data_structures.py  entity_creators.py  graph_generator.py  utils.py
tide/datastructures/: __init__.py  attributes.py  enums.py
tide/entities/: __init__.py  account.py  base.py  business.py  individual.py  institution.py
tide/output/: __init__.py  format.py
tide/outputs/: format.py
tide/patterns/: __init__.py  background_activity.py  background_manager.py  (+12 more)
(+28 files in other folders)
